SONAR-21195 Enhance scanner engine to download only required plugins